fix: update button dimensions in input group for better alignment

--- a/assets/scss/base/_fixes.scss
+++ b/assets/scss/base/_fixes.scss
@@ -18,6 +18,6 @@
 .input-group .btn {
 	padding-top: 0.375rem;
 	padding-bottom: 0.375rem;
-	min-height: 38px;
-	height: 38px;
+	min-height: 39px;
+	height: 39px;
 }
